letter spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ input[type="number"]{
     font-size: 14px;
     line-height: 18px;
     font-weight: 700;
-    letter-spacing: 0;
+    letter-spacing: 0.6px;
     margin-bottom: 0;
     padding: 14px;
     text-align: center;
@@ -1385,6 +1385,14 @@ footer.footer_area {
     border: none;
     width: 100%;
     font-weight: 700;
+    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+}
+.course-continue-btn button:hover, .course-continue-btn a:hover {
+    color: #dabc70;
 }
 .auto-load-modal .modal-header .close {
     margin: -1rem 0 0 auto;
@@ -2536,7 +2544,7 @@ td.add-to-btn input[type="submit"] {
 /* national holding */
 .join-part {
     padding: 24px;
-    background: #F7F7F7;
+    background: #FAFAFA;
     border: 1px solid #B0B0B0;
     border-radius: 8px;
 }
@@ -2573,6 +2581,7 @@ td.add-to-btn input[type="submit"] {
 }
 .join-text p a {
     color: #164E7F;
+    font-weight: 600;
 }
 .join-form .form-group label {
     color: #202020;
